(library
  (name matchers)
  (public_name comby.matchers)
  (preprocess (pps ppx_deriving.show ppx_sexp_conv ppx_sexp_message bisect_ppx -conditional -no-comment-parsing
  -- -pp ./ocaml-syntax-shims))
 (preprocessor_deps ../../ocaml-syntax-shims)
 (libraries comby.parsers comby.match ppxlib core mparser mparser.pcre))
